# Ampel-alerts

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  api.html  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  renovate.json  requirements.txt  search.html  searchindex.js  setup.py  test_requirements.txt
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/: dependabot.yml
.github/workflows/: main.yml
.jenkins/: Dockerfile.build  Jenkinsfile
_modules/: index.html
_modules/ampel/abstract/: AbsAlertFilter.html  AbsAlertRegister.html  AbsAlertSupplier.html
_modules/ampel/alert/: AlertConsumer.html  AlertProcessor.html  FilterBlocksHandler.html  IngestionHandler.html
_modules/ampel/alert/load/: DirAlertLoader.html  FileAlertLoader.html  TarAlertLoader.html
_modules/ampel/alert/reject/: BaseAlertRegister.html  DBRejectedLogsHandler.html  FullActiveAlertRegister.html  FullAlertRegister.html  GeneralActiveAlertRegister.html  GeneralAlertRegister.html  MinimalActiveAlertRegister.html  MinimalAlertRegister.html
_modules/ampel/model/: AlertProcessorDirective.html
_static/: documentation_options.js
ampel/: README.md
ampel/abstract/: AbsAlertFilter.py  AbsAlertIngester.py  AbsAlertLoader.py  AbsAlertRegister.py  AbsAlertSupplier.py
ampel/abstract/ingest/: AbsAlertContentIngester.py  AbsAlertIngester.py
ampel/alert/: APFilter.py  AlertConsumer.py  AlertConsumerError.py  AlertConsumerMetrics.py  AlertFileList.py  AlertProcessor.py  AlertProcessorMetrics.py  BaseAlertSupplier.py  FilterBlock.py  FilterBlocksHandler.py  FilteringAlertSupplier.py  IngestionHandler.py
ampel/alert/filter/: BasicCatalogFilter.py  BasicFilter.py  BasicMultiFilter.py
ampel/alert/ingest/: CompoundBluePrint.py  CompoundBluePrintBuilder.py  MemoryIngester.py  T2DocsBluePrint.py
ampel/alert/load/: AlertSupplier.py  DirAlertLoader.py  DirFileNamesLoader.py  DirTaggedAlertLoader.py  FileAlertLoader.py  README.md  TarAlertLoader.py  TarballWalker.py
ampel/alert/reject/: BaseAlertRegister.py  DBRejectedLogsHandler.py  FullActiveAlertRegister.py  FullAlertRegister.py  GeneralActiveAlertRegister.py  GeneralAlertRegister.py  MinimalActiveAlertRegister.py  MinimalAlertRegister.py
ampel/dev/: AutoCompleteBenchmark.py  UnitTestAlertSupplier.py
ampel/model/: AlertProcessorDirective.py  AutoStockMatchModel.py  InStockDirective.py  T0AddModel.py  T1CombineModel.py  T2ComputeModel.py  T2IngestModel.py
ampel/template/: AbsEasyChannelTemplate.py
conf/ampel-alerts/: ampel.yml  processor.conf
docs/sphinx/: api.rst  conf.py
notebooks/AlertProcessor/: FilteringAlertSupplier.ipynb
notebooks/AlertProcessor/Point T2/: PointT2 - All DataPoints.ipynb  PointT2 - All PhotoPoints.ipynb  PointT2 - All UpperLimits.ipynb  PointT2 - Every third PhotoPoint.ipynb  PointT2 - First PhotoPoint.ipynb  PointT2 - First UpperLimit and PhotoPoint.ipynb  PointT2 - First UpperLimit.ipynb  PointT2 - Last PhotoPoint.ipynb  PointT2 - Multi channel.ipynb
notebooks/AlertProcessor/Point T2/Demo Units/: PointT2 - Every third PhotoPoint (Demo Unit).ipynb  PointT2 - First PhotoPoint (Demo Unit).ipynb  PointT2 - First UpperLimit (Demo Unit).ipynb  PointT2 - First UpperLimit and PhotoPoint (Demo Units).ipynb
tests/: conftest.py  dummy_units.py  test_AbsEasyChannelTemplate.py  test_AlertConsumer.py  test_AlertProcessor.py  test_IngestionHandler.py  testing-config.yaml
