[tool.poetry]
name = "ampel-alerts"
version = "0.8.3-alpha.5"
description = "Alert support for the Ampel system"
authors = ["Valery Brinnel"]
maintainers = ["Jakob van Santen <jakob.van.santen@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelProject/Ampel-alerts"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
packages = [{include = "ampel"}]
include = [
    'conf/*/*.json',
    'conf/*/*/*.json',
    'conf/*/*.yaml',
    'conf/*/*/*.yaml',
    'conf/*/*.yml',
    'conf/*/*/*.yml',
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Sphinx = {version = ">=3.5.1,<5.0.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.11.1", optional = true}
tomlkit = {version = "^0.11.0", optional=true}
ampel-interface = {version = "^0.8.3-alpha.11"}
ampel-core = {version = "^0.8.3-alpha.11"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
mongomock = "^4.0.0"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
server = ["fastapi", "uvicorn"]
docs = ["Sphinx", "sphinx-autodoc-typehints", "tomlkit"]

[tool.coverage.run]
relative_files = true
